# next

./: .gitignore  main.py  pyproject.toml  test_db.db
apis/: base.py
apis/v1/: route_devices.py  route_general.py  route_login.py  route_users.py
core/: config.py  security.py
db/: base.py  session.py
db/models/: devices.py  users.py
db/repository/: device.py  login.py  user.py
schemas/: devices.py  users.py
templates/components/: navbar.html
templates/general_pages/: home.html
tests/test_routes/: test_devices.py  test_users.py
