[tool.poetry]
name = "next"
version = "0.1.0"
description = ""
authors = ["Roger hendricks <hendricks.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.45"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = "^1.7.4"
pytest = "^7.2.0"
httpx = "^0.23.1"
psycopg2-binary = "^2.9.5"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
